--- a/MM1.1PickingAnImage/Base.lproj/Main.storyboard
+++ b/MM1.1PickingAnImage/Base.lproj/Main.storyboard
@@ -45,7 +45,7 @@
                             <outlet property="delegate" destination="QfB-It-RwD" id="qfC-9I-6oq"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="yrc-Gn-IFb">
+                    <navigationItem key="navigationItem" title="Sent Memes" id="yrc-Gn-IFb">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="8vo-xD-r8e">
                             <connections>
                                 <action selector="showMemeEditor:" destination="QfB-It-RwD" id="UL1-cj-L4J"/>
@@ -77,25 +77,33 @@
         <!--Collection for Sent Memes-->
         <scene sceneID="gr4-Si-WWa">
             <objects>
-                <collectionViewController id="cdy-t3-2Af" userLabel="Collection for Sent Memes" sceneMemberID="viewController">
+                <collectionViewController id="cdy-t3-2Af" userLabel="Collection for Sent Memes" customClass="SentMemesCollectionViewController" customModule="MM1_1PickingAnImage" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="Jdb-4E-2s5">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="1TQ-hM-Nye">
-                            <size key="itemSize" width="50" height="50"/>
+                            <size key="itemSize" width="100" height="100"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CustomMemeCell" id="AYf-yu-PPf">
-                                <rect key="frame" x="0.0" y="64" width="50" height="50"/>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CustomMemeCell" id="AYf-yu-PPf" customClass="SentMemeCollectionViewCell" customModule="MM1_1PickingAnImage" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="64" width="100" height="100"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aXS-6M-aGg">
+                                            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                        </imageView>
+                                    </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
+                                <connections>
+                                    <outlet property="memeImage" destination="aXS-6M-aGg" id="iW8-c7-ysf"/>
+                                </connections>
                             </collectionViewCell>
                         </cells>
                         <connections>
@@ -103,7 +111,13 @@
                             <outlet property="delegate" destination="cdy-t3-2Af" id="EeP-2B-sTX"/>
                         </connections>
                     </collectionView>
-                    <navigationItem key="navigationItem" id="hiC-ck-nKx"/>
+                    <navigationItem key="navigationItem" title="Sent Memes" id="hiC-ck-nKx">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="XB6-nA-Do5">
+                            <connections>
+                                <action selector="showMemeEditor:" destination="cdy-t3-2Af" id="OhT-Mh-CKO"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4pu-yo-Djl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
